style.css
html {
    scroll-behavior: smooth;
}

body {
    background-color: #2b2b36;
    font-family: Consolas, monaco, monospace;
}

/* The sidebar menu */
.sidebar {
    height: 100%; 
    width: 0; 
    position: fixed; 
    z-index: 1; 
    top: 0;
    left: 0;
    background-color: #22252c;
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s;
  }
  
  .sidebar a {
    padding: 8px 8px 8px 65px;
    text-decoration: none;
    font-size: 18px;
    color: #fff;
    display: block;
    transition: 0.3s;
  }
  
  .sidebar a:hover, .active {
    background-color: #e14658;
  }
  
  .sidebar .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    padding: 0px 10px;
    margin-left: 50px;
    border-radius: 5px;
  }
  
  .openbtn {
    font-size: 24px;
    cursor: pointer;
    background-color: #22252c;
    color: #CACACD;
    padding: 10px 15px;
    border: none;
    position: fixed;
    z-index: 2;
  }
  
  .openbtn:hover {
    background-color: #e14658;
  }
  
  #main {
    transition: margin-left .5s;
    padding: 20px;
  }
  
  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
  @media screen and (max-height: 450px) {
    .sidebar {padding-top: 15px;}
    .sidebar a {font-size: 18px;}
  }


/* HOME PAGE */
#main-title h2 {
    margin-top: 15%;
    text-align: center;
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
    font-size: 64px;
    color: #FBFAFB;
    line-height: 1.2;
}

#main-title p {
    text-align: center;
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
    font-size: 20px;
    color: #FFFFFF;
    line-height: 1.2;
}

#status {
    text-align: center;
    max-width: 700px;
    padding: 25px 20px 10px 10px; 
    margin: auto;
    text-decoration: none;
    font-size: 26px;
    font-family: Consolas, monaco, monospace;
    color: #FFFFFF;
    display: block;
    background-color: #E14658;
}

#website {
    text-align: center;
    padding-top: 10px;
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
    font-size: 16px;
    color: #FFFFFF;
    line-height: 1;
}

#website a {
    color: #FFFFFF;
    text-decoration: underline;
}


/* PROJECT PAGES */
.proj-header {
    text-align: center;
    margin: 0px;
    text-decoration: none;
    display: block;
    background-color: #E14658;
}

.proj-title {
    font-size: 32px;
    color: #FFFFFF;
}

.proj-status {
    font-size: 18px;
    color: #FFFFFF;
}

.proj-dates {
    font-size: 14px;
    color: #FFFFFF;
}

.proj-shortcuts {
    right: 15px;
    bottom: 15px;
    text-align: center;
    line-height: 1.0;
    font-size: 12px;
    background-color: #22252c;
    border: none;
    border-radius: 2px;
    position: fixed;
}

.proj-shortcuts a{
    color: #CACACD;
    text-decoration: none;
}

.proj-shortcuts-top:hover, .proj-shortcuts-bot:hover {
    background-color: #e14658;
}

.posts {
    margin: auto 20px;
    padding: 25px 10px;
    text-decoration: none;
    font-size: 16px;
    font-family: Tahoma, Verdana, Segoe, sans-serif;
    display: block;
    background-color: #262830;
    color: #FFFFFF;
    text-decoration: none;
}


/* ABOUT PAGE */
#about-header {
    text-align: center;
    margin: 0px 0px;
    padding: 20px 5px;
    text-decoration: none;
    font-size: 36px;
    font-family: Consolas, monaco, monospace;
    color: #FFFFFF;
    display: block;
    background-color: #E14658;
}

#about-text {
    text-align: left;
    font-family: Tahoma, Verdana, Segoe, sans-serif;
    font-size: 18px;
    color: #FFFFFF;
    background-color: #262830;
    padding: 25px 50px;
    display: block;
    margin: 10px 25px;
}

#github-link {
    text-align: center;
    font-family: Consolas, monaco, monospace;
    font-size: 18px;
    color: #FFFFFF;
}

#github-link a {
    color: #FFFFFF;
    text-decoration: underline;
}

